# wyn360-cli

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  COST.md  Dockerfile.web  README.md  ROADMAP.md  ROADMAP_BROWSERUSE.md  SYSTEM.md  USE_CASES.md  config.yaml.example  deploy-azure.sh  docker-compose.web.yml  index.html  mkdocs.yml  pyproject.toml  read_docx.py  read_docx_robust.py  read_excel_script.py  read_pdf_manual.py  read_test_pdf.py  sitemap.xml  terminal-motd.sh
BROWSER_AUTH_RECOMMENDATIONS/: index.html
ROADMAP_ADD_BEDROCK/: index.html
ROADMAP_ASK_AI/: index.html
ROADMAP_BROWSERUSE/: index.html
ROADMAP_BROWSERUSE_STAGEHAND/: index.html
ROADMAP_BROWSER_SMOLAGENT/: index.html
ROADMAP_DOCUMENTS/: index.html
ROADMAP_GEMINI_INTEGRATION/: index.html
ROADMAP_GIT_BOOK/: index.html
ROADMAP_OCR/: index.html
ROADMAP_PHASE5_SUMMARY/: index.html
ROADMAP_SEMANTIC/: index.html
ROADMAP_VISION/: index.html
assets/: embedding-model-info.json
css/: ai-search.css
docs/: AUTONOMOUS_BROWSING.md  BROWSER_AUTH_RECOMMENDATIONS.md  COST.md  ROADMAP_ADD_BEDROCK.md  ROADMAP_BROWSERUSE.md  ROADMAP_BROWSERUSE_STAGEHAND.md  ROADMAP_BROWSER_SMOLAGENT.md  ROADMAP_DOCUMENTS.md  ROADMAP_GIT_BOOK.md  ROADMAP_OCR.md  ROADMAP_PHASE5_SUMMARY.md  ROADMAP_SEMANTIC.md  ROADMAP_VISION.md  SYSTEM.md  USE_CASES.md  index.md
docusaurus-docs/: MIGRATION_SUMMARY.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
js/: ai-search.js
overrides/: main.html
scripts/: build_search_index.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: __init__.py  simple_test.py  test_adaptive_chunking.py  (+74 more)
(+162 files in other folders)
